<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/layout_padding"
    android:paddingRight="@dimen/layout_padding" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_padding"
        android:gravity="center"
        android:text="@string/tv_welcome_login"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_marginTop="@dimen/layout_padding"
        android:background="@drawable/textbox_first"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/layout_padding"
            android:text="@string/tv_account"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_padding"
            android:background="@null"
            android:enabled="true"
            android:hint="@string/tv_account_hint"
            android:inputType="text"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:background="@drawable/textbox_last"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/layout_padding"
            android:text="@string/tv_pwd"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/layout_padding"
            android:background="@null"
            android:enabled="true"
            android:hint="@string/tv_pwd_hint"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/layout_padding"
        android:layout_marginRight="@dimen/layout_padding"
        android:layout_marginTop="@dimen/layout_padding"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/btn_login"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_register"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/layout_padding"
        android:layout_marginRight="@dimen/layout_padding"
        android:layout_marginTop="@dimen/layout_padding"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/btn_register"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_padding"
        android:gravity="center"
        android:text="@string/tv_status"
        android:textColor="@android:color/holo_red_light" />

    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tv_feedback"
        android:textColor="@android:color/holo_red_light" />

</LinearLayout>