<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.baidu.hi.sdk.activities.AddActivity" >

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark" />

    <RelativeLayout
        android:id="@+id/navibar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_top"
        android:background="@android:color/holo_blue_light" >

        <Button
            android:id="@+id/btn_back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/layout_width1"
            android:layout_height="@dimen/layout_height"
            android:layout_alignParentStart="true"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/btn_back"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/btn_add"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/navibar"
        android:background="@android:color/holo_blue_dark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_height"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/textbox_first"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_content1"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:gravity="center_vertical|end"
                android:text="@string/tv_oppsite_name"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_content1"
                android:layout_width="@dimen/layout_width2"
                android:layout_height="@dimen/layout_height"
                android:layout_marginStart="@dimen/layout_padding"
                android:background="@null"
                android:enabled="true"
                android:hint="@string/et_oppsite_name_hint"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/textbox_last"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_content2"
                android:layout_width="@dimen/layout_width"
                android:layout_height="@dimen/layout_height"
                android:gravity="center_vertical|end"
                android:text="@string/tv_oppsite_id"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_content2"
                android:layout_width="@dimen/layout_width2"
                android:layout_height="@dimen/layout_height"
                android:layout_marginStart="@dimen/layout_padding"
                android:background="@null"
                android:enabled="true"
                android:hint="@string/et_oppsite_id_hint"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/rg_types"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/rb_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:checked="true"
                android:text="@string/rb_add_user"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_creategroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:checked="false"
                android:text="@string/rb_create_group"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_addmember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:checked="false"
                android:text="@string/rb_add_member"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_joingroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:checked="false"
                android:text="@string/rb_join_group"
                android:textColor="@android:color/black"
                android:textSize="12sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btn_confirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_margin"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/btn_confirm"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>