<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_blue_dark" />

    <RelativeLayout
        android:id="@+id/navibar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider_top"
        android:background="@android:color/holo_blue_light" >

        <Button
            android:id="@+id/btn_back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/layout_width1"
            android:layout_height="@dimen/layout_height"
            android:layout_alignParentStart="true"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/btn_back"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="@dimen/layout_width"
            android:layout_height="@dimen/layout_height"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/btn_friend"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/layout_width1"
            android:layout_height="@dimen/layout_height"
            android:layout_alignParentEnd="true"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/btn_add"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/navibar"
        android:background="@android:color/holo_blue_dark" />

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider_bottom"
        android:layout_marginBottom="@dimen/layout_padding"
        android:layout_marginLeft="@dimen/layout_padding"
        android:layout_marginRight="@dimen/layout_padding"
        android:layout_marginTop="@dimen/layout_padding"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:scrollbars="none" />

</RelativeLayout>